fix(onboarding): Fix some rendering issues on iOS, change images

--- a/src/pages/onboarding/onboarding.scss
+++ b/src/pages/onboarding/onboarding.scss
@@ -30,9 +30,6 @@ page-onboarding {
     .swiper-wrapper {
       align-items: flex-end;
       width: auto;
-      :after {
-        display: block;
-      }
     }
     .swiper-slide {
       color: white;
@@ -66,21 +63,14 @@ page-onboarding {
       flex-direction: column;
     }
 
-    .explore img {
-      border: 10px solid map-get($colors, primary);
-      max-height: 125vh;
-      max-width: initial;
-    }
-
-    .secure img {
-      transform: translateY(5vh) rotate(5deg);
-      height: 70vh;
-      max-width: initial;
-    }
-
-    .notify img {
-      width: 110vw;
-      max-width: initial;
+    .explore,
+    .secure,
+    .notify {
+      img {
+        transform: translateY(10vh) rotate(3deg);
+        height: 70vh;
+        max-width: initial;
+      }
     }
   }
 
@@ -91,23 +81,24 @@ page-onboarding {
 }
 
 /* Waves */
-/* Copied from https://codepen.io/nckprsn/pen/GgxWrb */
+/* Copied (but modified) from https://codepen.io/nckprsn/pen/GgxWrb */
 
 .waves {
   width: calc(100% + 200vw);
   left: -100vw;
   height: 20vh;
-  bottom: 40vh;
+  bottom: 35vh;
   min-height: 10em;
-  position: fixed;
-  transform: rotate(180deg);
+  position: absolute;
+  transform: rotate(0deg);
+
   &::after {
     $color: map-get($colors, primary);
-    background: linear-gradient(to bottom, rgba($color, 0.9), $color, 15%, $color);
+    background: $color;
     content: '';
     display: block;
     position: fixed;
-    top: -100vh;
+    top: 25vh;
     height: 100vh;
     width: 100%;
   }
@@ -123,61 +114,46 @@ page-onboarding {
   animation-timing-function: linear;
 }
 
+$background: url('../assets/onboarding/wave_large.png');
 /* Individual wave layers */
 
 .wave_1 {
-  animation-name: wave_1;
-  animation-duration: 3400ms;
-  animation-delay: -1200ms;
-  top: -1.0em;
-  z-index: 1;
-  opacity: 0.10;
-  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="246" height="2000" viewBox="0 0 246 2000"><path fill-rule="evenodd" clip-rule="evenodd" fill="#{map-get($colors, primary)}" d="M0 2000c50.43 0 72.57-20.522 123-20.522 50.43 0 71.34 20.522 123 20.522V0H0v2000z"/></svg>');
-  background-position: bottom left;
+  background-size: 246px 2000px;
+  background-position: top left;
 }
 
 .wave_2 {
-  animation-name: wave_2;
-  animation-duration: 3200ms;
-  animation-delay: -600ms;
-  top: -2.0em;
-  z-index: 2;
-  opacity: 0.25;
-  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="307" height="2000" viewBox="0 0 307 2000"><path fill-rule="evenodd" clip-rule="evenodd" fill="#{map-get($colors, primary)}" d="M0 0h307v2000c-64.47 0-90.563-25.623-153.5-25.623C90.565 1974.377 62.935 2000 0 2000V0z"/></svg>');
-  background-position: bottom right;
+  background-size: 307px 2000px;
+  background-position: top right;
 }
 
 .wave_3 {
-  animation-name: wave_3;
-  animation-duration: 2800ms;
-  animation-delay: -2400ms;
-  top: -3.0em;
-  z-index: 3;
-  opacity: 0.50;
-  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="384" height="2000" viewBox="0 0 384 2000"><path fill-rule="evenodd" clip-rule="evenodd" fill="#{map-get($colors, primary)}" d="M0 0h384v2000c-80.64 0-113.28-32.047-192-32.047S78.72 2000 0 2000V0z"/></svg>');
-  background-position: bottom center;
+  background-size: 384px 2000px;
+  background-position: top center;
 }
 
 .wave_4 {
-  animation-name: wave_4;
-  animation-duration: 2600ms;
-  animation-delay: -1800ms;
-  top: -4.0em;
-  z-index: 4;
-  opacity: 0.75;
-  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="480" height="2000" viewBox="0 0 480 2000"><path fill-rule="evenodd" clip-rule="evenodd" fill="#{map-get($colors, primary)}" d="M480 2000c-100.8 0-141.6-39.892-240-39.892S98.4 2000 0 2000V0h480v2000z"/></svg>');
-  background-position: bottom left;
+  background-size: 480px 2000px;
+  background-position: top left;
 }
 
 .wave_5 {
-  animation-name: wave_5;
-  animation-duration: 3000ms;
-  animation-delay: -3000ms;
-  top: -5.0em;
-  z-index: 5;
-  opacity: 0.90;
-  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="600" height="2000" viewBox="0 0 600 2000"><path fill-rule="evenodd" clip-rule="evenodd" fill="#{map-get($colors, primary)}" d="M0 2000c123 0 177-49.866 300-49.866S474 2000 600 2000V0H0v2000z"/></svg>');
-  background-position: bottom right;
+  background-size: 600px 2000px;
+  background-position: top right;
+}
+
+@for $i from 1 through 5 {
+  .wave_#{$i} {
+    animation-name: wave_#{$i};
+    animation-duration: 3600ms - ($i * 200ms);
+    animation-delay: random(3000) * -1ms;
+    top: $i * 15px;
+    z-index: $i;
+    opacity: $i * .2;
+    // background-size: 1000px / ($i / $i) 2000px;
+    background-image: $background;
+    image-rendering: -webkit-optimize-contrast;
+  }
 }
 
 /* Wave animations */
@@ -193,9 +169,9 @@ page-onboarding {
   }
 }
 
-@include wave-keyframes('wave_1', .61em);
-@include wave-keyframes('wave_2', .77em);
-@include wave-keyframes('wave_3', .96em);
-@include wave-keyframes('wave_4', 1.2em);
-@include wave-keyframes('wave_5', 1.5em);
+@include wave-keyframes('wave_1', .61rem);
+@include wave-keyframes('wave_2', .77rem);
+@include wave-keyframes('wave_3', .96rem);
+@include wave-keyframes('wave_4', 1.2rem);
+@include wave-keyframes('wave_5', 1.5rem);
 
